<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <TextView
        android:id="@+id/title"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:shadowColor="#67587686"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="23pt"
        tools:ignore="ObsoleteLayoutParam,HardcodedText" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hintUser"
        android:inputType="textPersonName"
        tools:ignore="ObsoleteLayoutParam" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:ems="10"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        tools:ignore="ObsoleteLayoutParam" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/round_button"
        android:text="@string/log"
        android:textColor="@color/white_text"
        android:textSize="13pt" />

</RelativeLayout>